and merge requests ("dbus!nnn"). See README and CONTRIBUTING.md for
more details.

Dependencies:

• dbus now requires at least a basic level of support for C99 variadic
  macros, as implemented in gcc >= 3, all versions of Clang, and
  MSVC >= 2005. In practice this requirement has existed since version
  1.9.2, but it is now official.

Enhancements:

• Rewrite CONTRIBUTING.md to reflect the current setup
  (dbus!8, Simon McVittie)

• Tarball releases no longer contain pre-2007 changelogs and are now
  compressed with xz, so they should be somewhat smaller
  (fd.o #107630; Francesco Turco, Simon McVittie)

• Reference the freedesktop.org Code of Conduct (Simon McVittie)

• Build an implementation of dbus-run-session for Windows
  (dbus#135, dbus!22; Ralf Habacker)

• On Linux with SELinux, use avc_open() and monitor the AVC netlink fd
  in the main event loop, instead of using the deprecated avc_init()
  and a thread (dbus#134, dbus!31; Laurent Bigonville)

• On Linux with SELinux, use the SELINUX_CB_POLICYRELOAD callback
  to detect policy reloads, instead of monitoring the access vector
  cache with AVC_CALLBACK_RESET
  (dbus#134, dbus!31; Laurent Bigonville)

• Avoid double slashes in pkg-config paths (dbus!30, Ralf Habacker)

• Improve test coverage and clean up dead code
  (fd.o #107739, dbus#222; Simon McVittie)

• Allow --enable-relocation in combination with absolute paths for
  --exec-prefix, --libdir (fd.o #107662, Simon McVittie)

• Improve CMake build system parity with Autotools
  · In particular, detect inotify, prctl() and getpwnam_r() correctly
    on Linux
  (dbus#57, dbus#117, dbus#193, dbus#227, dbus!18;
  Ralf Habacker, Simon McVittie)

Fixes:

• Remove __attribute__((__malloc__)) attribute on dbus_realloc(),
  which does not meet the criteria for that attribute in gcc 4.7+,
  potentially leading to miscompilation (fd.o #107741, Simon McVittie)

• Parse section/group names in .service files according to the syntax